# tradebridge-20

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pom.xml
.github/workflows/: ci.yml
.project-factory/: manifest.json
database/: init.sql
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  OPERATIONS.md
src/: main.cpp
src/main/java/com/app/: Application.java
src/main/kotlin/com/app/: Application.kt
src/test/java/: AppTest.java
